k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-proxy
  namespace: shoppy
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-name: "Shoppy-frontend"
spec:
  ingressClassName: alb
  rules:
    - host: shoppy.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 3000
